# real-time-3d-visualization

./: ARFIVisualization.cxx  ARFIVisualization.h  README.md  notes_from_matt.rst
PNGReader/: ARFIVisualization.cxx  CMakeLists.txt
docs/: README.md
presentations/: 2016_4_18_nl91_real_time_3d_visualization_prostate_imaging.pptx  Ningrui_Li_Pratt_Fellows.ppt
